--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pzkogrodek-cms",
   "private": true,
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "A Strapi application",
   "scripts": {
     "develop": "strapi develop",
@@ -11,13 +11,17 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@_sh/strapi-plugin-ckeditor": "^2.0.4",
-    "@strapi/plugin-i18n": "4.13.7",
-    "@strapi/plugin-users-permissions": "4.13.7",
-    "@strapi/strapi": "4.13.7",
-    "better-sqlite3": "8.4.0",
-    "pg": "^8.11.0",
-    "slugify": "^1.6.6"
+    "@_sh/strapi-plugin-ckeditor": "^2.1.0",
+    "@strapi/plugin-i18n": "4.20.2",
+    "@strapi/plugin-users-permissions": "4.20.2",
+    "@strapi/strapi": "4.20.2",
+    "better-sqlite3": "9.4.3",
+    "pg": "^8.11.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.0",
+    "slugify": "^1.6.6",
+    "styled-components": "^5.2.1"
   },
   "author": {
     "name": "A Strapi developer"
