--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pzkogrodek-cms",
   "private": true,
-  "version": "0.9.0",
+  "version": "1.0.0",
   "description": "A Strapi application",
   "scripts": {
     "develop": "strapi develop",
@@ -11,17 +11,17 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@_sh/strapi-plugin-ckeditor": "^2.1.0",
-    "@strapi/plugin-i18n": "4.25.20",
-    "@strapi/plugin-users-permissions": "4.25.20",
-    "@strapi/strapi": "4.25.20",
-    "better-sqlite3": "9.4.3",
-    "pg": "^8.11.3",
+    "@strapi/plugin-cloud": "5.23.4",
+    "@strapi/plugin-users-permissions": "5.23.4",
+    "@strapi/strapi": "5.23.4",
+    "@strapi/types": "5.23.4",
+    "better-sqlite3": "12.2.0",
+    "pg": "8.16.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^5.2.0",
-    "slugify": "^1.6.6",
-    "styled-components": "^5.2.1"
+    "react-router-dom": "^6.0.0",
+    "slugify": "1.6.6",
+    "styled-components": "6.1.19"
   },
   "author": {
     "name": "A Strapi developer"
@@ -30,7 +30,6 @@
     "uuid": "6d694d1b-f727-4514-a12f-7166119cb11c"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
